# CMakeSample

./: CMakeLists.txt  main.cpp  readme.txt  testingConfig.h.in
lib/: CMakeLists.txt  giolib.cpp  giolib.h
trk/: CMakeLists.txt  trk.cpp  trk.h
